force-app/main/default/objects/OA_Grants_Opportunity_Staging__c/OA_Grants_Opportunity_Staging__c.object-meta.xml
<CustomObject>
    <description>Staging for Grants.gov Search2 funding-opportunity results (dormant Grants.gov connector foundation). This is an OPPORTUNITY-SIGNAL object (outreach-timing intelligence), NOT Lead firmographic data. Human-review-gated; nothing is acted on without review. No Lead write-back. No secrets are stored here (public, keyless API).</description>
    <label>OA Grants Opportunity Staging</label>
    <nameField>
        <displayFormat>GRANT-{00000}</displayFormat>
        <label>Grants Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OA Grants Opportunity Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>