force-app/main/default/objects/OA_Grants_Opportunity_Staging__c/fields/Agency_Code__c.field-meta.xml
<CustomField>
    <fullName>Agency_Code__c</fullName>
    <description>Grants.gov agency code that posted the opportunity (e.g. HHS-ACF).</description>
    <label>Agency Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>