force-app/main/default/objects/OA_Grants_Opportunity_Staging__c/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <description>Name of the agency that posted the opportunity.</description>
    <label>Agency Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>