force-app/main/default/objects/OA_Grants_Opportunity_Staging__c/fields/CFDA_Numbers__c.field-meta.xml
<CustomField>
    <fullName>CFDA_Numbers__c</fullName>
    <description>Comma-joined CFDA/ALN assistance-listing numbers for the opportunity.</description>
    <label>CFDA Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>