force-app/main/default/objects/OA_Grants_Opportunity_Staging__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Application close/deadline date for the opportunity (the outreach-timing signal).</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>