force-app/main/default/objects/OA_Grants_Opportunity_Staging__c/fields/Dedupe_Key__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Key__c</fullName>
    <description>Idempotency key = Source_Run_ID__c + "|" + Opportunity_Number__c (falls back to opportunity id). External Id + Unique so re-running a Grants.gov fetch upserts rather than duplicating staging rows.</description>
    <externalId>true</externalId>
    <label>Dedupe Key</label>
    <length>90</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>