force-app/main/default/objects/OA_Grants_Opportunity_Staging__c/fields/Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Doc_Type__c</fullName>
    <description>Grants.gov document type for the hit (e.g. synopsis, forecast).</description>
    <label>Doc Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>