force-app/main/default/objects/OA_Grants_Opportunity_Staging__c/fields/HTTP_Status__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Status__c</fullName>
    <description>HTTP response code from the Grants.gov API call (200=success, 429=rate limited, 5xx=server error).</description>
    <label>HTTP Status</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>