force-app/main/default/objects/OA_Grants_Opportunity_Staging__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <description>Optional LOOSE association to a Lead this opportunity may be relevant to (set later during reviewed matching; blank until then). Grants.gov is an opportunity-signal source — there is NO Lead write-back in the dormant foundation.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>OA Grants Opportunity Staging</relationshipLabel>
    <relationshipName>OA_Grants_Opportunity_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>