force-app/main/default/objects/OA_Grants_Opportunity_Staging__c/fields/Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Date__c</fullName>
    <description>Date the funding opportunity opens/was posted.</description>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>