force-app/main/default/objects/OA_Grants_Opportunity_Staging__c/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>Grants.gov opportunity/funding number for this NOFO.</description>
    <label>Opportunity Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>