force-app/main/default/objects/OA_Grants_Opportunity_Staging__c/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <description>Grants.gov opportunity status (posted, forecasted, closed, archived).</description>
    <label>Opportunity Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>