force-app/main/default/objects/OA_Grants_Opportunity_Staging__c/fields/Opportunity_Title__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Title__c</fullName>
    <description>Title of the Grants.gov funding opportunity.</description>
    <label>Opportunity Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>