force-app/main/default/objects/OA_Grants_Opportunity_Staging__c/fields/Opportunity_URL__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_URL__c</fullName>
    <description>Public Grants.gov detail URL for the opportunity (built from the opportunity id).</description>
    <label>Opportunity URL</label>
    <type>Url</type>
</CustomField>