force-app/main/default/objects/OA_Grants_Opportunity_Staging__c/fields/Query_Date__c.field-meta.xml
<CustomField>
    <fullName>Query_Date__c</fullName>
    <description>Date the Grants.gov fetch ran.</description>
    <label>Query Date</label>
    <type>Date</type>
</CustomField>