force-app/main/default/objects/OA_Grants_Opportunity_Staging__c/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <description>Human review gate for a Grants.gov opportunity staging row. Nothing is acted on until a reviewer advances this. Default Pending.</description>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Auto Verified</fullName>
            </value>
            <value>
                <fullName>Exception / Needs Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>