force-app/main/default/objects/OA_Grants_Opportunity_Staging__c/fields/Search_Term__c.field-meta.xml
<CustomField>
    <fullName>Search_Term__c</fullName>
    <description>The keyword submitted to Grants.gov Search2 that produced this row.</description>
    <label>Search Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>